<resources>
    <string name="app_name">Happy Hour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">title</string>
    <string name="instructions">Ingredients You Need:</string>
    <string name="drink_image">drinkImage</string>
    <string name="search_drinks">Drink Name</string>
    <string name="search">search</string>
    <string name="make">Make Drink</string>

    <string name="tellJoke">Tell Me A Joke</string>
    <string name="makeDrink">Make My Drink</string>
    <string name="intro">My Name is Leo and I\'ll be your bartender. Do you want to hear a joke or continue on to make your drink?</string>
    <string name="title_search">Order</string>
    <string name="title_favorites">Favorite Drinks List</string>
    <string name="save">Save</string>

</resources>
