<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.makeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="393dp"
        android:layout_height="293dp"
        android:src="@drawable/barman"
        app:layout_constraintBottom_toTopOf="@+id/makeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659" />

    <TextView
        android:id="@+id/makeTextView"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/intro"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/JokeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#7EC7C0"
        android:text="@string/tellJoke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeTextView" />

    <Button
        android:id="@+id/Drank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#7BC3BB"
        android:text="@string/makeDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>